pkg/controller/appdefinition/testdata/ingress/basic/expected.yaml.d/appinstance.yaml
kind: AppInstance
apiVersion: internal.acorn.io/v1
metadata:
  uid: 1234567890abcdef
  name: app-name
  namespace: app-namespace
spec:
  image: test
  ports:
  - targetServiceName: oneimage
    serviceName: localhost
    publish: true
  - targetServiceName: oneimage
    serviceName: ci1.acorn.not
    publish: true
status:
  namespace: app-created-namespace
  appImage:
    id: test
  appSpec:
    containers:
      oneimage:
        sidecars:
          left:
            image: "foo"
            ports:
              - port: 90
                targetPort: 91
                protocol: tcp
                publish: true
        ports:
          - port: 80
            targetPort: 81
            publish: true
            protocol: http
        image: "image-name"
        build:
          dockerfile: "Dockerfile"
          context: "."
      buildimage:
        ports:
          - port: 80
            targetPort: 81
            publish: true
            protocol: http
          - port: 443
            targetPort: 91
            publish: true
            protocol: tcp
        image: "sha256:build-image"
        build:
          dockerfile: "custom-dockerfile"
          context: "."
  conditions:
    - type: defined
      reason: Success
      status: "True"
      success: true
---
