pkg/controller/appdefinition/testdata/ingress/basic/expected.yaml.d/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: oneimage
  namespace: app-created-namespace
  labels:
    "acorn.io/app-namespace": "app-namespace"
    "acorn.io/app-name": "app-name"
    "acorn.io/service-name": "oneimage"
    "acorn.io/managed": "true"
  annotations:
    acorn.io/targets: '{"ci1.acorn.not":{"port":81,"service":"oneimage"},"localhost":{"port":81,"service":"oneimage"},"oneimage-app-name-a5b0aade9cb9.local.on-acorn.io":{"port":81,"service":"oneimage"}}'
spec:
  rules:
    - host: localhost
      http:
        paths:
          - backend:
              service:
                name: oneimage
                port:
                  number: 80
            path: /
            pathType: Prefix
    - host: ci1.acorn.not
      http:
        paths:
          - backend:
              service:
                name: oneimage
                port:
                  number: 80
            path: /
            pathType: Prefix
    - host: oneimage-app-name-a5b0aade9cb9.local.on-acorn.io
      http:
        paths:
          - backend:
              service:
                name: oneimage
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - ci1.acorn.not
      secretName: test-tls-app-name-app-namespace-1234567890ab
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: buildimage
  namespace: app-created-namespace
  labels:
    "acorn.io/app-namespace": "app-namespace"
    "acorn.io/app-name": "app-name"
    "acorn.io/service-name": "buildimage"
    "acorn.io/managed": "true"
  annotations:
    acorn.io/targets: '{"buildimage-app-name-40018221221c.local.on-acorn.io":{"port":81,"service":"buildimage"}}'
spec:
  rules:
    - host: buildimage-app-name-40018221221c.local.on-acorn.io
      http:
        paths:
          - backend:
              service:
                name: buildimage
                port:
                  number: 80
            path: /
            pathType: Prefix
---
