pkg/controller/appdefinition/testdata/ingress/basic/expected.yaml.d/service.yaml
kind: ServiceInstance
apiVersion: internal.acorn.io/v1
metadata:
  name: oneimage
  namespace: app-created-namespace
  labels:
    "acorn.io/app-namespace": "app-namespace"
    "acorn.io/app-name": "app-name"
    "acorn.io/container-name": "oneimage"
    "acorn.io/managed": "true"
spec:
  appName: app-name
  appNamespace: app-namespace
  labels:
    "acorn.io/app-namespace": "app-namespace"
    "acorn.io/app-name": "app-name"
    "acorn.io/container-name": "oneimage"
    "acorn.io/managed": "true"
  container: oneimage
  publish:
  - hostname: localhost
  - hostname: ci1.acorn.not
  ports:
    - port: 80
      targetPort: 81
      publish: true
      protocol: http
      name: "80"
    - port: 90
      targetPort: 91
      publish: true
      protocol: tcp
      name: "90"
---
kind: ServiceInstance
apiVersion: internal.acorn.io/v1
metadata:
  name: buildimage
  namespace: app-created-namespace
  labels:
    "acorn.io/app-namespace": "app-namespace"
    "acorn.io/app-name": "app-name"
    "acorn.io/container-name": "buildimage"
    "acorn.io/managed": "true"
spec:
  appName: app-name
  appNamespace: app-namespace
  labels:
    "acorn.io/app-namespace": "app-namespace"
    "acorn.io/app-name": "app-name"
    "acorn.io/container-name": "buildimage"
    "acorn.io/managed": "true"
  container: buildimage
  ports:
    - port: 80
      targetPort: 81
      publish: true
      protocol: http
      name: "80"
    - port: 443
      targetPort: 91
      publish: true
      protocol: tcp
      name: "443"
